cabal-version:       2.2

name:                campo-minado-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/campo-minado-haskell#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable campo-minado-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:       Types, Jogo.Logica, Interface.PreparaJogo, Interface.Cursor, Jogo.Jogo
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, ansi-terminal
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/campo-minado-haskell
